fixing accessright validation issue (#1526)